# cogent3-h5seqs

./: .gitignore  README.md  noxfile.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  codeql.yml  linters.yml  release.yml
src/cogent3_h5seqs/: __init__.py  aligned.py  pack_nucleic.py  seq_transform.py  unaligned.py  util.py
tests/: test_h5seqs.py  test_lazy_state.py  test_packing.py  test_seq_transform.py  test_unaligned.py
