[project]
name = "cogent3-h5seqs"
version = "0.1.0"
description = "HDF5 storage driver for cogent3 sequence collections"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Gavin Huttley", email = "Gavin.Huttley@anu.edu.au" }
]
requires-python = ">=3.12"
dependencies = [
    "blosc2>=3.3.0",
    "cogent3>=2025.3.22a4",
    "h5py>=3.13.0",
    "hdf5plugin>=5.1.0",
    "numpy>=2.2.4",
    "typing-extensions>=4.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
]
[project.entry-points."cogent3.storage.unaligned_seqs"]
h5seqs_unaligned = "cogent3_h5seqs:UnalignedSeqsData"

[project.entry-points."cogent3.storage.aligned_seqs"]
h5seqs_aligned = "cogent3_h5seqs:AlignedSeqsData"

[project.entry-points."cogent3.parse.sequence"]
c3h5 = "cogent3_h5seqs:H5SeqsParser"

[project.entry-points."cogent3.format.sequence"]
c3h5 = "cogent3_h5seqs:H5SeqsWriter"
