[project]
name = "cogent3-h5seqs"
version = "0.1.0"
description = "HDF5 storage driver for cogent3 sequence collections"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Gavin Huttley", email = "Gavin.Huttley@anu.edu.au" }
]
requires-python = ">=3.10"
dependencies = [
    "blosc2",
    "cogent3 @ git+https://github.com/cogent3/cogent3.git@develop",
    "h5py>=3.13.0",
    "hdf5plugin>=5.1.0",
    "numpy>=2.2.4",
    "typing-extensions>=4.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# until we have a released version of cogent3 supporting drivers
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "nox>=2025.2.9",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
]

[tool.uv]
reinstall-package = ["cogent3-h5seqs"]

[project.entry-points."cogent3.storage.unaligned_seqs"]
h5seqs_unaligned = "cogent3_h5seqs:UnalignedSeqsData"

[project.entry-points."cogent3.storage.aligned_seqs"]
h5seqs_aligned = "cogent3_h5seqs:AlignedSeqsData"

[project.entry-points."cogent3.parse.sequence"]
c3h5 = "cogent3_h5seqs:H5SeqsParser"

[project.entry-points."cogent3.format.sequence"]
c3h5 = "cogent3_h5seqs:H5SeqsWriter"
