[project]
name = "cogent3-h5seqs"
dynamic = ["version"]
description = "HDF5 storage driver for cogent3 sequence collections"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Gavin Huttley", email = "Gavin.Huttley@anu.edu.au" }]
requires-python = ">=3.11,<3.15"
dependencies = [
    "cogent3>=2026.1.20a1",
    "h5py>=3.16.0",
    "numpy>=2.4.4",
    "typing-extensions>=4.15.0",
    "xxhash",
]
keywords = [
    "biology",
    "genomics",
    "statistics",
    "phylogeny",
    "evolution",
    "bioinformatics",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
"Bug Tracker" = "https://github.com/cogent3/cogent3-h5seqs/issues"
"Source Code" = "https://github.com/cogent3/cogent3-h5seqs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cogent3_h5seqs/__init__.py"

[tool.hatch.metadata]
# until we have a released version of cogent3 supporting drivers
allow-direct-references = true

[dependency-groups]
dev = [
    "nox>=2026.4.10",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = ["--strict-config"]
norecursedirs = ["doc", ".nox"]

[tool.uv]
reinstall-package = ["cogent3-h5seqs"]
# Minimize the risk of supply chain attacks
exclude-newer = "7 days"

[[tool.mypy.overrides]]
module = ["numba", "h5py", "h5py.*", "xxhash"]
ignore_missing_imports = true

[project.entry-points."cogent3.storage.unaligned_seqs"]
h5seqs_unaligned = "cogent3_h5seqs:UnalignedSeqsData"
c3h5u = "cogent3_h5seqs:UnalignedSeqsData"

[project.entry-points."cogent3.storage.aligned_seqs"]
h5seqs_aligned = "cogent3_h5seqs:AlignedSeqsData"
c3h5a = "cogent3_h5seqs:AlignedSeqsData"
h5seqs_sparse = "cogent3_h5seqs:SparseSeqsData"
c3h5s = "cogent3_h5seqs:SparseSeqsData"

[project.entry-points."cogent3.parse.sequence"]
c3h5a = "cogent3_h5seqs:H5SeqsAlignedParser"
c3h5s = "cogent3_h5seqs:H5SeqsSparseParser"
c3h5u = "cogent3_h5seqs:H5SeqsUnalignedParser"

[project.entry-points."cogent3.format.sequence"]
c3h5a = "cogent3_h5seqs:H5AlignedSeqsWriter"
c3h5s = "cogent3_h5seqs:H5SparseSeqsWriter"
c3h5u = "cogent3_h5seqs:H5UnalignedSeqsWriter"
